--- a/.github/workflows/python-package2.yml
+++ b/.github/workflows/python-package2.yml
@@ -5,9 +5,9 @@ name: Build
 
 on:
   push:
-    branches: [ v3 ]
+    branches: [ main ]
   pull_request:
-    branches: [ v3 ]
+    branches: [ main ]
 
 jobs:
   build:
